--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,10 @@
 .user-handle{
 	font-size: 13pt!important;
 }
+.btn-big{
+	height: 300px!important;
+	width: 300px!important;
+}
+.resize-twitter{
+	font-size: 65pt;
+}
